book and media report content update Tue 09/21/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/20/2021 06:00<br>
+Completed books sorted by folder - 09/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 59 books - 567H 47M / 23D 15H 47M<br>
+Completed in 2021 : 60 books - 571H 19M / 23D 19H 19M<br>
 Total Comic Trades : 25<br>
-Average book length : 9H 37M<br>
-Hours read per week : 15H 6M<br>
-On pace to complete 81 books (788H 32M / 32D 20H 32M) by the end of 2021<br>
+Average book length : 9H 31M<br>
+Hours read per week : 15H 8M<br>
+On pace to complete 83 books (790H 21M / 32D 22H 21M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -48,6 +48,7 @@ Expanse Novella 7.5 - Auberon - James S. A. Corey - 2H 25M<br>
 Harley Quinn Black + White + Red - 7H 13M<br>
 Homo Deus - A Brief History of Tomorrow - Yuval Noah Harari - 14H 58M<br>
 House Of M Ultimate Edition - 6H 28M<br>
+HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M<br>
 King in Black - 4H 28M<br>
 Marvel Comics 1000 - 4H 28M<br>
 Moon Knight Legacy vol 2 - 3H 29M<br>
@@ -462,9 +463,9 @@ World War Z - Max Brooks - 5H 59M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
+Queue - Current Audiobooks - 179 books - 2269H 47M / 94D 13H 47M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
+Completed in 2021 - 60 books - 571H 19M / 23D 19H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -477,28 +478,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
+Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2770H 33M / 115D 10H 33M<br>
+210 queued items: 2753H 35M / 114D 17H 35M<br>
 0 reserve titles are marked as high priority<br>
-26.19% of reserve items are queued<br>
+25.67% of reserve items are queued<br>
  <br>
-All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1211 titles - 14471H 44M / 602D 23H 44M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
-Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
-Average completed per year: 45.0 titles - 498H 30M / 20D 18H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 393 titles - 4349H 7M / 181D 5H 7M<br>
+Total remaining in queue and reserve: 818 titles - 10122H 37M / 421D 18H 37M<br>
+Average completed per year: 45.1 titles - 498H 44M / 20D 18H 44M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.624 (1.624 seconds)<br>
-Total time including file writes: 00:00:01.624 (1.624 seconds)
+Total time to process all reports: 00:00:02.408 (2.408 seconds)<br>
+Total time including file writes: 00:00:02.409 (2.409 seconds)
 </div>
 </body>
 </html>
