--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/20/2021 06:00<br>
+Completed books sorted by name - 09/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-392 books<br>
+393 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -195,6 +195,7 @@ HP 1 - Harry Potter and the Sorcerer's Stone - J.K. Rowling - 8H 35M (Completed 
 HP 2 - Harry Potter and the Chamber of Secrets - J.K. Rowling - 9H 26M (Completed in 2020)<br>
 HP 3 - Harry Potter and the Prisoner of Azkaban - J.K. Rowling - 12H 18M (Completed in 2020)<br>
 HP 4 - Harry Potter and the Goblet of Fire - J.K. Rowling - 21H 18M (Completed in 2020)<br>
+HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M (Completed in 2021)<br>
 Hainish Cycle 6 - The Left Hand of Darkness - Ursula K Le Guin - 1H 54M (Completed in 2013)<br>
 Harley Quinn Black + White + Red - 7H 13M (Completed in 2021)<br>
 Homo Deus - A Brief History of Tomorrow - Yuval Noah Harari - 14H 58M (Completed in 2021)<br>
@@ -409,9 +410,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
+Queue - Current Audiobooks - 179 books - 2269H 47M / 94D 13H 47M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
+Completed in 2021 - 60 books - 571H 19M / 23D 19H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -424,28 +425,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
+Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2770H 33M / 115D 10H 33M<br>
+210 queued items: 2753H 35M / 114D 17H 35M<br>
 0 reserve titles are marked as high priority<br>
-26.19% of reserve items are queued<br>
+25.67% of reserve items are queued<br>
  <br>
-All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1211 titles - 14471H 44M / 602D 23H 44M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
-Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
-Average completed per year: 45.0 titles - 498H 30M / 20D 18H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 393 titles - 4349H 7M / 181D 5H 7M<br>
+Total remaining in queue and reserve: 818 titles - 10122H 37M / 421D 18H 37M<br>
+Average completed per year: 45.1 titles - 498H 44M / 20D 18H 44M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.624 (1.624 seconds)<br>
-Total time including file writes: 00:00:01.624 (1.624 seconds)
+Total time to process all reports: 00:00:02.408 (2.408 seconds)<br>
+Total time including file writes: 00:00:02.409 (2.409 seconds)
 </div>
 </body>
 </html>
