--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/20/2021 06:00<br>
+Reserved books sorted by length - 09/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-817 books<br>
+818 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -28,13 +28,12 @@ Strong Voices - Fifteen American Speeches Worth Knowing - Tonya Bolden - 3H 5M (
 Of Mice and Men - John Steinbeck - 3H 12M (Queue - Current Audiobooks)<br>
 Mind over Weight - Ian K. Smith, M.D - 3H 18M (Book Reserve - Audiobooks)<br>
 The Call of the Wild - Jack London - 3H 20M (Queue - Current Audiobooks)<br>
-HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Queue - Current Audiobooks)<br>
+HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Book Reserve - Audiobooks)<br>
 The Canterbury Tales - Geoffrey Chaucer - 3H 22M (Book Reserve - Audiobooks)<br>
 William Shakespeare's The Empire Striketh Back - 3H 26M (Book Reserve - Audiobooks)<br>
 Spider-gwen vol 3 - 3H 29M (Book Reserve - Comic Trades)<br>
 The Stranger - Albert Camus - 3H 30M (Queue - Current Audiobooks)<br>
 The Canterbury Tales II - Geoffrey Chaucer - 3H 31M (Book Reserve - Audiobooks)<br>
-HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M (Queue - Current Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 1 - Sir Arthur Conan Doyle - 3H 32M (Book Reserve - Audiobooks)<br>
 The Canterbury Tales III - Geoffrey Chaucer - 3H 34M (Book Reserve - Audiobooks)<br>
 William Shakespeare's The Jedi Doth Return - 3H 34M (Book Reserve - Audiobooks)<br>
@@ -46,6 +45,7 @@ Candide - Voltaire - 3H 41M (Book Reserve - Audiobooks)<br>
 Child of God - Cormac McCarthy - 3H 42M (Book Reserve - Audiobooks)<br>
 The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M (Book Reserve - Comic Trades)<br>
 Transformers More Than Meets The Eye Volume 2 - 3H 51M (Book Reserve - Comic Trades)<br>
+HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M (Book Reserve - Audiobooks)<br>
 Mary Poppins - P. L. Travers - 3H 51M (Queue - Current Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 2 - Sir Arthur Conan Doyle - 3H 53M (Book Reserve - Audiobooks)<br>
 Venomverse - 3H 59M (Book Reserve - Comic Trades)<br>
@@ -64,7 +64,7 @@ The Wake-Up Call - John Micklethwait - 4H 29M (Queue - Current Audiobooks)<br>
 Mood Elevator - Berrett Koehler - 4H 33M (Book Reserve - Audiobooks)<br>
 The Return of Sherlock Holmes, Volume 3 - Sir Arthur Conan Doyle - 4H 35M (Book Reserve - Audiobooks)<br>
 The Answer Is - Alex Trebek - 4H 37M (Queue - Current Audiobooks)<br>
-HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Queue - Current Audiobooks)<br>
+HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Book Reserve - Audiobooks)<br>
 Transformers All Hail Megatron Volume 2 - 4H 43M (Book Reserve - Comic Trades)<br>
 A Study in Scarlet - Sir Arthur Conan Doyle - 4H 46M (Book Reserve - Audiobooks)<br>
 Man's Search for Meaning - Viktor E. Frankl - 4H 46M (Queue - Current Audiobooks)<br>
@@ -80,13 +80,14 @@ Twilight of Democracy - Anne Applebaum - 5H 17M (Book Reserve - Audiobooks)<br>
 The Casebook of Sherlock Holmes II - Sir Arthur Conan Doyle - 5H 18M (Book Reserve - Audiobooks)<br>
 Sherlock Holmes--A Baker Street Dozen - Sir Arthur Conan Doyle - 5H 19M (Book Reserve - Audiobooks)<br>
 The Mist - Stephen King - 5H 21M (Book Reserve - Audiobooks)<br>
-HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Queue - Current Audiobooks)<br>
+HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Book Reserve - Audiobooks)<br>
 Breakfast of Champions - Kurt Vonnegut - 5H 27M (Book Reserve - Audiobooks)<br>
 Superman vol 4 - 5H 28M (Book Reserve - Comic Trades)<br>
 ADHD 2.0 - Edward M. Hallowell - 5H 28M (Queue - Current Audiobooks)<br>
 Cosmic Trilogy 1 - Out of the Silent Planet - C. S. Lewis - 5H 28M (Queue - Current Audiobooks)<br>
 Time Quartet 2 - A Wind in the Door - Madeleine L'engle - 5H 29M (Book Reserve - Audiobooks)<br>
 The God Equation - Michio Kaku - 5H 32M (Book Reserve - Audiobooks)<br>
+HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M (Book Reserve - Audiobooks)<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M (Queue - Current Audiobooks)<br>
 Diana and the Underworld Odyssey - Aisha Saeed - 5H 36M (Queue - Current Audiobooks)<br>
 Raising Good Humans - Carla Naumburg - 5H 38M (Queue - Current Audiobooks)<br>
@@ -740,9 +741,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
+Queue - Current Audiobooks - 179 books - 2269H 47M / 94D 13H 47M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
+Completed in 2021 - 60 books - 571H 19M / 23D 19H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -755,28 +756,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
+Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2770H 33M / 115D 10H 33M<br>
+210 queued items: 2753H 35M / 114D 17H 35M<br>
 0 reserve titles are marked as high priority<br>
-26.19% of reserve items are queued<br>
+25.67% of reserve items are queued<br>
  <br>
-All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1211 titles - 14471H 44M / 602D 23H 44M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
-Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
-Average completed per year: 45.0 titles - 498H 30M / 20D 18H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 393 titles - 4349H 7M / 181D 5H 7M<br>
+Total remaining in queue and reserve: 818 titles - 10122H 37M / 421D 18H 37M<br>
+Average completed per year: 45.1 titles - 498H 44M / 20D 18H 44M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.624 (1.624 seconds)<br>
-Total time including file writes: 00:00:01.624 (1.624 seconds)
+Total time to process all reports: 00:00:02.408 (2.408 seconds)<br>
+Total time including file writes: 00:00:02.409 (2.409 seconds)
 </div>
 </body>
 </html>
