--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/20/2021 06:00<br>
+Reserved books sorted by folder - 09/21/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 183 books - 2286H 45M / 95D 6H 45M<br>
+Queue - Current Audiobooks : 179 books - 2269H 47M / 94D 13H 47M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -71,10 +71,6 @@ How to Talk When Kids Won't Listen - Joanna Faber - 8H 56M<br>
 HP 5 - Harry Potter and the Order of the Phoenix - J.K. Rowling - 27H 10M<br>
 HP 6 - Harry Potter and the Half-Blood Prince - J.K. Rowling - 19H 1M<br>
 HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M<br>
-HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M<br>
-HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
-HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M<br>
-HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M<br>
 Human Hacking - Christopher Hadnagy - 8H 33M<br>
 Hyperfocus - Chris Bailey - 6H 41M<br>
 Inheritance 1 - The Hundred Thousand Kingdoms - N. K. Jemisin - 11H 51M<br>
@@ -408,7 +404,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 445 books - 6054H 11M / 252D 6H 11M<br>
+Book Reserve - Audiobooks : 450 books - 6077H 1M / 253D 5H 1M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -563,6 +559,11 @@ How Innovation Works - Matt Ridley - 12H 38M<br>
 How Long 'til Black Future Month - N. K. Jemisin - 14H 14M<br>
 How to Raise an Adult - Julie Lythcott-Haims - 12H 35M<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M<br>
+HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
+HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M<br>
+HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M<br>
+HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M<br>
+HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M<br>
 I Am Legend and Other Stories - Richard Matheson - 10H 54M<br>
 If It Bleeds - Stephen King - 15H 17M<br>
 In Cold Blood - Truman Capote - 14H 29M<br>
@@ -860,9 +861,9 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 183 books - 2286H 45M / 95D 6H 45M<br>
+Queue - Current Audiobooks - 179 books - 2269H 47M / 94D 13H 47M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 59 books - 567H 47M / 23D 15H 47M<br>
+Completed in 2021 - 60 books - 571H 19M / 23D 19H 19M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -875,28 +876,28 @@ Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
 Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 445 books - 6054H 11M / 252D 6H 11M<br>
+Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-214 queued items: 2770H 33M / 115D 10H 33M<br>
+210 queued items: 2753H 35M / 114D 17H 35M<br>
 0 reserve titles are marked as high priority<br>
-26.19% of reserve items are queued<br>
+25.67% of reserve items are queued<br>
  <br>
-All books included in this report: 1209 titles - 14462H 21M / 602D 14H 21M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1211 titles - 14471H 44M / 602D 23H 44M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 392 titles - 4345H 35M / 181D 1H 35M<br>
-Total remaining in queue and reserve: 817 titles - 10116H 45M / 421D 12H 45M<br>
-Average completed per year: 45.0 titles - 498H 30M / 20D 18H 30M<br>
-Remaining years of reserve material at average yearly pace: 18.2<br>
-Remaining years of reserve material at current year pace: 10.1<br>
+Total completed since 01/01/2013: 393 titles - 4349H 7M / 181D 5H 7M<br>
+Total remaining in queue and reserve: 818 titles - 10122H 37M / 421D 18H 37M<br>
+Average completed per year: 45.1 titles - 498H 44M / 20D 18H 44M<br>
+Remaining years of reserve material at average yearly pace: 18.1<br>
+Remaining years of reserve material at current year pace: 9.9<br>
  <br>
-Total time to process all reports: 00:00:01.624 (1.624 seconds)<br>
-Total time including file writes: 00:00:01.624 (1.624 seconds)
+Total time to process all reports: 00:00:02.408 (2.408 seconds)<br>
+Total time including file writes: 00:00:02.409 (2.409 seconds)
 </div>
 </body>
 </html>
