book and media report content update Wed 09/22/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/21/2021 06:00<br>
+Reserved books sorted by length - 09/22/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 818 books<br>
@@ -15,6 +15,7 @@ Reserved books sorted by length - 09/21/2021 06:00<br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
 White Fang - Jack London - 1H 59M (Queue - Current Audiobooks)<br>
+Stamped (For Kids) - Ibram X. Kendi - 2H 23M (Queue - Current Audiobooks)<br>
 Logan's Run - William F. Nolan - 2H 23M (Queue - Current Audiobooks)<br>
 Beowulf - 2H 24M (Book Reserve - Audiobooks)<br>
 Napalm and Silly Putty - George Carlin - 2H 29M (Book Reserve - Audiobooks)<br>
@@ -741,9 +742,9 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2269H 47M / 94D 13H 47M<br>
+Queue - Current Audiobooks - 180 books - 2272H 10M / 94D 16H 10M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 60 books - 571H 19M / 23D 19H 19M<br>
+Completed in 2021 - 61 books - 577H 17M / 24D 1H 17M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -753,7 +754,7 @@ Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
 Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
-Book Reserve - Manga - 2 books - 13H 56M / 0D 13H 56M<br>
+Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
 Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
@@ -762,22 +763,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2753H 35M / 114D 17H 35M<br>
+211 queued items: 2755H 58M / 114D 19H 58M<br>
 0 reserve titles are marked as high priority<br>
-25.67% of reserve items are queued<br>
+25.79% of reserve items are queued<br>
  <br>
-All books included in this report: 1211 titles - 14471H 44M / 602D 23H 44M<br>
-Records not found in the lookup file: 2<br>
+All books included in this report: 1212 titles - 14474H 7M / 603D 2H 7M<br>
+Records not found in the lookup file: 1<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 393 titles - 4349H 7M / 181D 5H 7M<br>
-Total remaining in queue and reserve: 818 titles - 10122H 37M / 421D 18H 37M<br>
-Average completed per year: 45.1 titles - 498H 44M / 20D 18H 44M<br>
+Total completed since 01/01/2013: 394 titles - 4355H 5M / 181D 11H 5M<br>
+Total remaining in queue and reserve: 818 titles - 10119H 2M / 421D 15H 2M<br>
+Average completed per year: 45.2 titles - 499H 16M / 20D 19H 16M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.9<br>
+Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:02.408 (2.408 seconds)<br>
-Total time including file writes: 00:00:02.409 (2.409 seconds)
+Total time to process all reports: 00:00:01.701 (1.701 seconds)<br>
+Total time including file writes: 00:00:01.702 (1.702 seconds)
 </div>
 </body>
 </html>
