--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -67,6 +67,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1535115320l/40121378._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1564025916l/44439415._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1614042924l/352262._SY475_.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1609442065l/54865124._SY475_.jpg" width="300" >
 </div>
 </body>
 </html>
