--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-09-23<br>
+Progress bars collected from from brandonsanderson.com on 2021-09-24<br>
 <br>
 Cytonic Final Proofread 100%<br>
 <br>
@@ -15,7 +15,7 @@ Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%<br>
 <br>
 ReDawn (Skyward Novella 2) Final Draft 100%<br>
 <br>
-Evershore (Skyward Novella 3) Brandon Draft 100%<br>
+Evershore (Skyward Novella 3) Final Draft 30%<br>
 <br>
 </div>
 </body>
