book and media report content update Sat 09/25/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/24/2021 06:00<br>
+Completed books sorted by name - 09/25/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-394 books<br>
+395 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -111,6 +111,7 @@ Discworld 17 - Intreresting Times - 10H 3M (Completed in 2021)<br>
 Discworld 18 - Maskerade - 8H 51M (Completed in 2021)<br>
 Discworld 19 - Feet of Clay - 9H 33M (Completed in 2021)<br>
 Discworld 20 - Hogfather - 9H 48M (Completed in 2021)<br>
+Discworld 21 - Jingo - 10H 44M (Completed in 2021)<br>
 Discworld 27 - The Last Hero - 4H 25M (Completed in 2020)<br>
 Discworld 28 - The Amazing Maurice and His Educated Rodents - 6H 21M (Completed in 2016)<br>
 Discworld 30 - The Wee Free Men - 7H 13M (Completed in 2016)<br>
@@ -411,9 +412,9 @@ Zones of Thought 1 - A Fire Upon the Deep - Vernor Vinge - 21H 43M (Completed in
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 180 books - 2272H 10M / 94D 16H 10M<br>
+Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 61 books - 577H 17M / 24D 1H 17M<br>
+Completed in 2021 - 62 books - 588H 1M / 24D 12H 1M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -432,22 +433,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-211 queued items: 2755H 58M / 114D 19H 58M<br>
+210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.79% of reserve items are queued<br>
+25.7% of reserve items are queued<br>
  <br>
 All books included in this report: 1212 titles - 14474H 7M / 603D 2H 7M<br>
 Records not found in the lookup file: 0<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 394 titles - 4355H 5M / 181D 11H 5M<br>
-Total remaining in queue and reserve: 818 titles - 10119H 2M / 421D 15H 2M<br>
-Average completed per year: 45.1 titles - 498H 57M / 20D 18H 57M<br>
+Total completed since 01/01/2013: 395 titles - 4365H 49M / 181D 21H 49M<br>
+Total remaining in queue and reserve: 817 titles - 10108H 18M / 421D 4H 18M<br>
+Average completed per year: 45.2 titles - 500H 2M / 20D 20H 2M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.9<br>
+Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:01.578 (1.578 seconds)<br>
-Total time including file writes: 00:00:01.578 (1.578 seconds)
+Total time to process all reports: 00:00:01.562 (1.562 seconds)<br>
+Total time including file writes: 00:00:01.563 (1.563 seconds)
 </div>
 </body>
 </html>
