book and media report content update Sun 09/26/2021

--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/25/2021 06:00<br>
+Completed books sorted by folder - 09/26/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Completed in 2021 : 62 books - 588H 1M / 24D 12H 1M<br>
 Total Comic Trades : 26<br>
 Average book length : 9H 29M<br>
-Hours read per week : 15H 21M<br>
-On pace to complete 84 books (801H 19M / 33D 9H 19M) by the end of 2021<br>
+Hours read per week : 15H 18M<br>
+On pace to complete 84 books (798H 22M / 33D 6H 22M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -496,12 +496,12 @@ No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 395 titles - 4365H 49M / 181D 21H 49M<br>
 Total remaining in queue and reserve: 817 titles - 10108H 18M / 421D 4H 18M<br>
-Average completed per year: 45.2 titles - 500H 2M / 20D 20H 2M<br>
+Average completed per year: 45.2 titles - 499H 52M / 20D 19H 52M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:01.562 (1.562 seconds)<br>
-Total time including file writes: 00:00:01.563 (1.563 seconds)
+Total time to process all reports: 00:00:01..56 (1.56 seconds)<br>
+Total time including file writes: 00:00:01..56 (1.56 seconds)
 </div>
 </body>
 </html>
