book and media report content update Tue 09/28/2021

--- a/report/books/2021_book_images.html
+++ b/report/books/2021_book_images.html
@@ -69,6 +69,7 @@
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1614042924l/352262._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1609442065l/54865124._SY475_.jpg" width="300" >
 <img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1327921813l/47990.jpg" width="300" >
+<img src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1453058019l/26067586.jpg" width="300" >
 </div>
 </body>
 </html>
