--- a/report/books/Completed_books_sorted_by_folder.html
+++ b/report/books/Completed_books_sorted_by_folder.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by folder - 09/27/2021 06:00<br>
+Completed books sorted by folder - 09/28/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Completed in 2021 : 62 books - 588H 1M / 24D 12H 1M<br>
-Total Comic Trades : 26<br>
-Average book length : 9H 29M<br>
-Hours read per week : 15H 14M<br>
-On pace to complete 83 books (795H 26M / 33D 3H 26M) by the end of 2021<br>
+Completed in 2021 : 63 books - 592H 29M / 24D 16H 29M<br>
+Total Comic Trades : 27<br>
+Average book length : 9H 24M<br>
+Hours read per week : 15H 18M<br>
+On pace to complete 84 books (798H 28M / 33D 6H 28M) by the end of 2021<br>
  <br>
 21 Lessons for the 21st Century - Yuval Noah Harari - 11H 44M<br>
 A People's History of the United States - Howard Zinn - 34H 19M<br>
@@ -28,6 +28,7 @@ Attack on Titan 33 - 5H 58M<br>
 Avengers Vol. 7 The Age of Khonshu - 5H 43M<br>
 Batman Fortnite Zero Point - 4H 43M<br>
 Batman White Knight - 7H 13M<br>
+Bizarro - 4H 28M<br>
 Bobiverse 4 - Heaven's River - Dennis E. Taylor - 16H 57M<br>
 Capital and Ideology - Thomas Piketty - 49H 10M<br>
 Cosmic Ghost Rider vol 1 - 3H 29M<br>
@@ -467,7 +468,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 62 books - 588H 1M / 24D 12H 1M<br>
+Completed in 2021 - 63 books - 592H 29M / 24D 16H 29M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -476,11 +477,11 @@ Completed in 2016 - 29 books - 336H 38M / 14D 0H 38M<br>
 Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
-Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
+Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
+Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
+Book Reserve - Audiobooks - 452 books - 6083H 32M / 253D 11H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -488,20 +489,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.7% of reserve items are queued<br>
+25.64% of reserve items are queued<br>
  <br>
-All books included in this report: 1212 titles - 14474H 7M / 603D 2H 7M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1215 titles - 14486H 36M / 603D 14H 36M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 395 titles - 4365H 49M / 181D 21H 49M<br>
-Total remaining in queue and reserve: 817 titles - 10108H 18M / 421D 4H 18M<br>
-Average completed per year: 45.2 titles - 499H 43M / 20D 19H 43M<br>
+Total completed since 01/01/2013: 396 titles - 4370H 17M / 182D 2H 17M<br>
+Total remaining in queue and reserve: 819 titles - 10116H 18M / 421D 12H 18M<br>
+Average completed per year: 45.3 titles - 500H 4M / 20D 20H 4M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
-Total time including file writes: 00:00:01..57 (1.57 seconds)
+Total time to process all reports: 00:00:07.132 (7.132 seconds)<br>
+Total time including file writes: 00:00:07.133 (7.133 seconds)
 </div>
 </body>
 </html>
