--- a/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
+++ b/report/books/A_randomized_list_of_reserved_comic_book_trade_titles.html
@@ -7,128 +7,127 @@
 </head>
 <body>
 <div class="content">
-A randomized list of reserved comic book trade titles - 09/27/2021 06:00<br>
+A randomized list of reserved comic book trade titles - 09/28/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-117 books<br>
+116 books<br>
  <br>
+Superior Spider-man Necessary Evil - 3H 36M<br>
+Superman vol 3 - 4H 28M<br>
+Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
+The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
+Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
+Green Lanterns vol 4 - 3H 59M<br>
+Iron Man Extremis - 4H 58M<br>
+Saga vol 5 - 4H 43M<br>
+X-men Gold vol 1 - 4H 28M<br>
+Suicide Squad vol 5 - 6H 28M<br>
 Batman 66 vol 3 - 5H 13M<br>
-White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
-Civil War II - 9H 12M<br>
-Spider-gwen vol 3 - 3H 29M<br>
-Batman 66 vol 2 - 5H 28M<br>
+DCeased - 6H 58M<br>
+Fantastic Four vol 1 - 4H 28M<br>
+Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
 Deadpool, Vol. 3 X Marks the Spot - 4H 28M<br>
-Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
-Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
+Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
+Umbrella Academy vol 1 - 5H 43M<br>
+Super Sons vol 1 - 3H 59M<br>
+Pride of Baghdad - 4H 14M<br>
+Batman Eternal vol 1 - 14H 56M<br>
+Swamp Thing Bronze Age vol 1 - 9H 27M<br>
+Atomic Robo Everything Explodes - 11H 57M<br>
+Future State Wonder Woman - 6H 13M<br>
+Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
+Suicide Squad vol 4 - 4H 28M<br>
+Spider-man Spider Island - 11H 42M<br>
+Spider-man-Deadpool vol 2 - 3H 44M<br>
+The Dark Knight Returns - 6H 58M<br>
+Despicable Deadpool vol 2 - 3H 29M<br>
+Astonishing Spider-man & Wolverine - 5H 13M<br>
+Sandman Omnibus vol 1 - 32H 22M<br>
+Civil War II - 9H 12M<br>
+Batman vol 8 - 5H 28M<br>
 Avengers vol 1 - 4H 58M<br>
+Spider-Verse - 20H 10M<br>
+Batman Last Knight on Earth - 5H 43M<br>
+Darth Vader vol 4 - 5H 13M<br>
+Gwenpool, the Unbelievable Vol. 1 Believe It (The Unbelievable Gwenpool) - 4H 43M<br>
+Saga vol 3 - 4H 28M<br>
+Green Lanterns vol 3 - 5H 13M<br>
+Thanos vol 1 - 4H 14M<br>
 Red Hood and the Outlaws vol 1 - 5H 13M<br>
 Deadpool too soon - 4H 14M<br>
-Sandman Omnibus vol 1 - 32H 22M<br>
-Batman Eternal vol 1 - 14H 56M<br>
-Spider-man Spider Island - 11H 42M<br>
-Detective Comics 1000 - 5H 28M<br>
-Saga vol 3 - 4H 28M<br>
-Darth Vader vol 4 - 5H 13M<br>
-Spider-Man Miles Morales Vol. 2 - 4H 14M<br>
-Thor God of Thunder Reborn vol 1 - 4H 14M<br>
-Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
-Saga vol 4 - 4H 28M<br>
-Green Lanterns vol 2 - 6H 28M<br>
-Batman vol 9 - 4H 43M<br>
-Deadpool v Carnage - 3H 44M<br>
-Batman The Doom That Came To Gotham - 5H 28M<br>
-Fantastic Four vol 1 - 4H 28M<br>
-Super Sons vol 1 - 3H 59M<br>
-Justice League Darkseid War - 11H 42M<br>
-Teen Titans by Geoff Johns Book One - 11H 27M<br>
-Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
-Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
-The Dark Knight Returns - 6H 58M<br>
-Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
-Carnage vol 2 World Tour - 3H 29M<br>
-Umbrella Academy vol 1 - 5H 43M<br>
-Saga vol 5 - 4H 43M<br>
-Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
-Iron Man Extremis - 4H 58M<br>
-Once & Future Vol. 1 - 4H 58M<br>
+Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
 Batman Eternal vol 2 - 13H 56M<br>
-Action Comics 1000 - 4H 58M<br>
-Darth Vader vol 3 - 3H 59M<br>
-Batman Damned - 5H 28M<br>
-Spawn Origins Volume 2 - 5H 43M<br>
-Saga vol 6 - 4H 43M<br>
-Wolverine - Black, White & Blood Treasury Edition - 4H 14M<br>
-Despicable Deadpool vol 2 - 3H 29M<br>
-Lumberjanes - 4H 6M<br>
-X-men Gold vol 1 - 4H 28M<br>
-Spider-man-Deadpool vol 3 - 4H 14M<br>
-Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
-Superman vol 3 - 4H 28M<br>
-Transformers All Hail Megatron Volume 2 - 4H 43M<br>
-Thanos vol 1 - 4H 14M<br>
-Spider-man Big Time vol 1 - 16H 11M<br>
-Marvel Infinity - 18H 25M<br>
-War Machine - Volume 1 Iron Heart - 4H 14M<br>
-Edge of Spider-geddon - 3H 44M<br>
-Spawn Origins Volume 1 - 4H 58M<br>
-Swamp Thing Bronze Age vol 1 - 9H 27M<br>
-Pride of Baghdad - 4H 14M<br>
-Mister Miracle - 9H 57M<br>
-Captain Marvel Vol. 3 Alis Volat Propriis - 2H 59M<br>
-Uncanny X-force vol 1 - 16H 11M<br>
-Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
 Spider-gwen vol 2 - 3H 29M<br>
-Guardians of the galaxy vol 1 - 9H 12M<br>
-Astonishing X-Men Vol 1 Gifted - 4H 43M<br>
-Green Lanterns vol 4 - 3H 59M<br>
-Atomic Robo Everything Explodes - 11H 57M<br>
-Astonishing Spider-man & Wolverine - 5H 13M<br>
-Superior Spider-man Necessary Evil - 3H 36M<br>
-Martian Manhunter Vol. 1 The Epiphany - 4H 58M<br>
-Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
-Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
-Green Lanterns vol 3 - 5H 13M<br>
+Thor Vol 1 The Goddess of Thunder - 4H 4M<br>
 Spider-geddon - 6H 13M<br>
-Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
-Uncanny X-force vol 2 - 12H 42M<br>
-Deadpool Classic Killogy - 8H 43M<br>
-Invincible Iron Man vol 1 - 4H 14M<br>
-Batman Last Knight on Earth - 5H 43M<br>
-Umbrella Academy vol 2 - 5H 58M<br>
-Spider-man-Deadpool vol 2 - 3H 44M<br>
-Amazing Spider-Man Venom Inc - 4H 58M<br>
-Spider-Verse - 20H 10M<br>
-Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
 Maus II - A Survivor's Tale - And Here My Troubles Began - 4H 28M<br>
-How to Fall Forever (Black Science) - 4H 43M<br>
-Black Panther vol 1 - 4H 28M<br>
+Venomverse - 3H 59M<br>
+White Sand vol 2 - Brandon Sanderson - 4H 58M<br>
+Guardians of the galaxy vol 1 - 9H 12M<br>
 Lobo Portrait of a Bastich - 6H 28M<br>
-Batman Arkham Asylum - 7H 13M<br>
-Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
-Superman vol 4 - 5H 28M<br>
-Atomic Robo Crystals are Integral - 13H 4M<br>
-Edge of Venomverse - 3H 29M<br>
-Iron Man 2020 Robot Revolution - 4H 14M<br>
-Suicide Squad vol 5 - 6H 28M<br>
-The Weatherman Volume 1 - 6H 13M<br>
-The Unstoppable Wasp Unlimited Vol. 1 Fix Everything - 3H 44M<br>
-Batman vol 8 - 5H 28M<br>
-Black Panther vol 2 - 4H 28M<br>
-Suicide Squad vol 4 - 4H 28M<br>
-Infamous Iron Man vol 2 - 4H 14M<br>
+Batman The Doom That Came To Gotham - 5H 28M<br>
+Amazing Spider-man Back to Basics vol 1 - 4H 43M<br>
 Transformers All Hail Megatron Volume 1 - 4H 43M<br>
 Deadpool, Vol. 2 Dark Reign - 3H 44M<br>
-Future State Wonder Woman - 6H 13M<br>
-DCeased - 6H 58M<br>
-Batwoman vol 1 - 5H 13M<br>
-Venomverse - 3H 59M<br>
-Dark Nights Death Metal Deluxe Edition - 7H 13M<br>
-Despicable Deadpool vol 3 - 3H 29M<br>
 Batman Li'l Gotham Vol. 1 - 8H 28M<br>
 Deadpool v Gambit - 3H 29M<br>
+Umbrella Academy vol 2 - 5H 58M<br>
+Rocket Raccoon & Groot Vol. 2 - 3H 29M<br>
+Batman vol 9 - 4H 43M<br>
+Deadpool v Carnage - 3H 44M<br>
+Journey into Mystery by Kieron Gillen The Complete Collection Volume 1 - 12H 12M<br>
+Edge of Spider-geddon - 3H 44M<br>
+Batman Gotham by Gaslight (Elseworlds) - 3H 29M<br>
+Teen Titans by Geoff Johns Book One - 11H 27M<br>
+Saga vol 4 - 4H 28M<br>
+Gwenpool, The Unbelievable Vol. 2 Head of M.O.D.O.K. TPB (The Unbelievable Gwenpool) - 4H 14M<br>
+Transformers More Than Meets The Eye Volume 2 - 3H 51M<br>
+Spider-gwen vol 3 - 3H 29M<br>
+Lumberjanes - 4H 6M<br>
+Spider-man Big Time vol 1 - 16H 11M<br>
+Marvel Infinity - 18H 25M<br>
+Deadpool Classic Killogy - 8H 43M<br>
+Spawn Origins Volume 1 - 4H 58M<br>
+Batwoman vol 1 - 5H 13M<br>
+Batman Damned - 5H 28M<br>
+Invincible Iron Man vol 1 - 4H 14M<br>
+Transformers All Hail Megatron Volume 2 - 4H 43M<br>
+Black Panther vol 1 - 4H 28M<br>
+Black Panther vol 2 - 4H 28M<br>
+Spawn Origins Volume 2 - 5H 43M<br>
+Carnage vol 2 World Tour - 3H 29M<br>
+Saga vol 6 - 4H 43M<br>
+Superman vol 4 - 5H 28M<br>
+Edge of Venomverse - 3H 29M<br>
+War Machine - Volume 1 Iron Heart - 4H 14M<br>
+Uncanny X-force vol 1 - 16H 11M<br>
+Justice League Darkseid War - 11H 42M<br>
+Harley Quinn Vol. 1 Die Laughing (Rebirth) - 5H 13M<br>
+Once & Future Vol. 1 - 4H 58M<br>
+Atomic Robo Crystals are Integral - 13H 4M<br>
+Detective Comics 1000 - 5H 28M<br>
+Darth Vader vol 3 - 3H 59M<br>
+Amazing Spider-man Worldwide vol 1 - 4H 14M<br>
+How to Fall Forever (Black Science) - 4H 43M<br>
+Uncanny X-force vol 2 - 12H 42M<br>
+Action Comics 1000 - 4H 58M<br>
 Absolute Carnage - 6H 13M<br>
-Bizarro - 4H 28M<br>
-Wonder Woman Vol. 2 Year One (Rebirth) - 5H 13M<br>
+Green Lanterns vol 2 - 6H 28M<br>
+Batman 66 vol 2 - 5H 28M<br>
+Peter Parker The Spectacular Spider-man vol 1 - 4H 28M<br>
+Maus I - A Survivor's Tale - My Father Bleeds History - 4H 57M<br>
+The Weatherman Volume 1 - 6H 13M<br>
+Infamous Iron Man vol 2 - 4H 14M<br>
+Thor God of Thunder Reborn vol 1 - 4H 14M<br>
+Batman Arkham Asylum - 7H 13M<br>
+Star Wars Skywalker Strikes vol 1 - 4H 28M<br>
+Mister Miracle - 9H 57M<br>
+Daredevil by Chip Zdarsky Vol. 1 Know Fear - 3H 44M<br>
+Despicable Deadpool vol 3 - 3H 29M<br>
+Amazing Spider-Man Venom Inc - 4H 58M<br>
+Spider-man-Deadpool vol 3 - 4H 14M<br>
+Iron Man 2020 Robot Revolution - 4H 14M<br>
 -----------------------------------------------------<br>
  <br>
 Summary Report<br>
@@ -136,7 +135,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 62 books - 588H 1M / 24D 12H 1M<br>
+Completed in 2021 - 63 books - 592H 29M / 24D 16H 29M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -145,11 +144,11 @@ Completed in 2016 - 29 books - 336H 38M / 14D 0H 38M<br>
 Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
-Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
+Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
+Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
+Book Reserve - Audiobooks - 452 books - 6083H 32M / 253D 11H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -157,20 +156,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.7% of reserve items are queued<br>
+25.64% of reserve items are queued<br>
  <br>
-All books included in this report: 1212 titles - 14474H 7M / 603D 2H 7M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1215 titles - 14486H 36M / 603D 14H 36M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 395 titles - 4365H 49M / 181D 21H 49M<br>
-Total remaining in queue and reserve: 817 titles - 10108H 18M / 421D 4H 18M<br>
-Average completed per year: 45.2 titles - 499H 43M / 20D 19H 43M<br>
+Total completed since 01/01/2013: 396 titles - 4370H 17M / 182D 2H 17M<br>
+Total remaining in queue and reserve: 819 titles - 10116H 18M / 421D 12H 18M<br>
+Average completed per year: 45.3 titles - 500H 4M / 20D 20H 4M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
-Total time including file writes: 00:00:01..57 (1.57 seconds)
+Total time to process all reports: 00:00:07.132 (7.132 seconds)<br>
+Total time including file writes: 00:00:07.133 (7.133 seconds)
 </div>
 </body>
 </html>
