--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 09/27/2021 06:00<br>
+All books sorted by name - 09/28/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1212 books<br>
+1215 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -148,7 +148,7 @@ Bill Hodges 1 - Mr. Mercedes - Stephen King - 14H 26M (Completed in 2019)<br>
 Bill Hodges 2 - Finders Keepers - Stephen King - 13H 9M (Queue - Current Audiobooks)<br>
 Bill Hodges 3 - End of Watch - Stephen King - 12H 57M (Book Reserve - Audiobooks)<br>
 Binti - Nnedi Okorafor - 2H 31M (Completed in 2018)<br>
-Bizarro - 4H 28M (Book Reserve - Comic Trades)<br>
+Bizarro - 4H 28M (Completed in 2021)<br>
 Black Panther vol 1 - 4H 28M (Book Reserve - Comic Trades)<br>
 Black Panther vol 2 - 4H 28M (Book Reserve - Comic Trades)<br>
 Black Sun - Rebecca Roanhorse - 12H 50M (Book Reserve - Audiobooks)<br>
@@ -457,6 +457,8 @@ HP 7 - Harry Potter and the Deathly Hallows - J.K. Rowling - 21H 42M (Queue - Cu
 HTTYD 01 - How to Train Your Dragon  - Cressida Cowell - 3H 31M (Completed in 2021)<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M (Book Reserve - Audiobooks)<br>
 HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M (Book Reserve - Audiobooks)<br>
+HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M (Book Reserve - Audiobooks)<br>
+HTTYD 07 - How to Ride a Dragon's Storm  - Cressida Cowell - 3H 49M (Book Reserve - Audiobooks)<br>
 HTTYD 08 - How to Break a Dragon's Heart - Cressida Cowell - 4H 40M (Book Reserve - Audiobooks)<br>
 HTTYD 10 - How to Seize a Dragon's Jewel  - Cressida Cowell - 5H 32M (Book Reserve - Audiobooks)<br>
 HTTYD 11 - How to Betray a Dragon's Hero - Cressida Cowell - 5H 26M (Book Reserve - Audiobooks)<br>
@@ -492,6 +494,7 @@ How to Fall Forever (Black Science) - 4H 43M (Book Reserve - Comic Trades)<br>
 How to Live Safely in a Science Fictional Universe - Charles Yu - 6H 8M (Completed in 2020)<br>
 How to Raise Kids Who Aren't Assholes - Melinda Wenner Moyer - 8H 19M (Queue - Current Audiobooks)<br>
 How to Raise an Adult - Julie Lythcott-Haims - 12H 35M (Book Reserve - Audiobooks)<br>
+How to Stop Losing Your Sht with Your Kids - Carla Naumburg - 5H 58M (Book Reserve - Physical and Kindle Books)<br>
 How to Talk So Kids Can Learn - 1H 44M (Completed in 2018)<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M (Book Reserve - Audiobooks)<br>
 How to Talk When Kids Won't Listen - Joanna Faber - 8H 56M (Queue - Current Audiobooks)<br>
@@ -1231,7 +1234,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 62 books - 588H 1M / 24D 12H 1M<br>
+Completed in 2021 - 63 books - 592H 29M / 24D 16H 29M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -1240,11 +1243,11 @@ Completed in 2016 - 29 books - 336H 38M / 14D 0H 38M<br>
 Completed in 2015 - 37 books - 457H 16M / 19D 1H 16M<br>
 Completed in 2014 - 27 books - 479H 44M / 19D 23H 44M<br>
 Completed in 2013 - 38 books - 436H 51M / 18D 4H 51M<br>
-Book Reserve - Physical and Kindle Books - 15 books - 190H 35M / 7D 22H 35M<br>
+Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
-Book Reserve - Comic Trades - 117 books - 730H 44M / 30D 10H 44M<br>
+Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 450 books - 6077H 1M / 253D 5H 1M<br>
+Book Reserve - Audiobooks - 452 books - 6083H 32M / 253D 11H 32M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -1252,20 +1255,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.7% of reserve items are queued<br>
+25.64% of reserve items are queued<br>
  <br>
-All books included in this report: 1212 titles - 14474H 7M / 603D 2H 7M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1215 titles - 14486H 36M / 603D 14H 36M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 395 titles - 4365H 49M / 181D 21H 49M<br>
-Total remaining in queue and reserve: 817 titles - 10108H 18M / 421D 4H 18M<br>
-Average completed per year: 45.2 titles - 499H 43M / 20D 19H 43M<br>
+Total completed since 01/01/2013: 396 titles - 4370H 17M / 182D 2H 17M<br>
+Total remaining in queue and reserve: 819 titles - 10116H 18M / 421D 12H 18M<br>
+Average completed per year: 45.3 titles - 500H 4M / 20D 20H 4M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
 Remaining years of reserve material at current year pace: 9.8<br>
  <br>
-Total time to process all reports: 00:00:01..57 (1.57 seconds)<br>
-Total time including file writes: 00:00:01..57 (1.57 seconds)
+Total time to process all reports: 00:00:07.132 (7.132 seconds)<br>
+Total time including file writes: 00:00:07.133 (7.133 seconds)
 </div>
 </body>
 </html>
