book and media report content update Wed 09/29/2021

--- a/report/books/Completed_books_sorted_by_name.html
+++ b/report/books/Completed_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Completed books sorted by name - 09/28/2021 06:00<br>
+Completed books sorted by name - 09/29/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-396 books<br>
+397 books<br>
  <br>
 12 Rules for Life - Jordan B. Peterson - 15H 44M (Completed in 2020)<br>
 13 Things That Don't Make Sense - Michael Brooks - 8H 59M (Completed in 2018)<br>
@@ -275,6 +275,7 @@ Pern 9-02 - Dragonquest - 12H 12M (Completed in 2013)<br>
 Pern 9-06 - The White Dragon - 14H 39M (Completed in 2014)<br>
 Randomize - Andy Weir - 0H 50M (Completed in 2020)<br>
 Range - Why Generalists Triumph in a Specialized World - David Epstein - 10H 20M (Completed in 2019)<br>
+Rationality - Steven Pinker - 11H 22M (Completed in 2021)<br>
 Ready Player One - Ernest Cline - 15H 45M (Completed in 2013)<br>
 Redshirts - John Scalzi - 7H 42M (Completed in 2014)<br>
 Remembrance of Earth's Past 1 - The Three-Body Problem - Cixin Liu - 13H 29M (Completed in 2017)<br>
@@ -415,7 +416,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 63 books - 592H 29M / 24D 16H 29M<br>
+Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -428,7 +429,7 @@ Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 452 books - 6083H 32M / 253D 11H 32M<br>
+Book Reserve - Audiobooks - 453 books - 6086H 27M / 253D 14H 27M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -436,20 +437,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.64% of reserve items are queued<br>
+25.61% of reserve items are queued<br>
  <br>
-All books included in this report: 1215 titles - 14486H 36M / 603D 14H 36M<br>
-Records not found in the lookup file: 3<br>
+All books included in this report: 1217 titles - 14500H 53M / 604D 4H 53M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 396 titles - 4370H 17M / 182D 2H 17M<br>
-Total remaining in queue and reserve: 819 titles - 10116H 18M / 421D 12H 18M<br>
-Average completed per year: 45.3 titles - 500H 4M / 20D 20H 4M<br>
+Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
+Total remaining in queue and reserve: 820 titles - 10119H 13M / 421D 15H 13M<br>
+Average completed per year: 45.4 titles - 501H 13M / 20D 21H 13M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.8<br>
+Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:07.132 (7.132 seconds)<br>
-Total time including file writes: 00:00:07.133 (7.133 seconds)
+Total time to process all reports: 00:00:01.713 (1.713 seconds)<br>
+Total time including file writes: 00:00:01.713 (1.713 seconds)
 </div>
 </body>
 </html>
