--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/28/2021 06:00<br>
+Reserved books sorted by folder - 09/29/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
 Queue - Current Audiobooks : 179 books - 2261H 26M / 94D 5H 26M<br>
@@ -403,7 +403,7 @@ VALIS - Philip K Dick - 8H 44M<br>
 Way Station (Here Gather the Stars) - Clifford Simak - 7H 1M<br>
 -----------------------------------------------------<br>
  <br>
-Book Reserve - Audiobooks : 452 books - 6083H 32M / 253D 11H 32M<br>
+Book Reserve - Audiobooks : 453 books - 6086H 27M / 253D 14H 27M<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M<br>
 20,000 Leagues Under the Sea - Jules Verne - 11H 25M<br>
@@ -558,6 +558,7 @@ How Innovation Works - Matt Ridley - 12H 38M<br>
 How Long 'til Black Future Month - N. K. Jemisin - 14H 14M<br>
 How to Raise an Adult - Julie Lythcott-Haims - 12H 35M<br>
 How to Talk So Little Kids Will Listen - Joanna Faber - 10H 10M<br>
+HTTYD 02 - How to Be a Pirate  - Cressida Cowell - 2H 55M<br>
 HTTYD 04 - How to Cheat a Dragon's Curse - Cressida Cowell - 3H 20M<br>
 HTTYD 05 - How to Twist a Dragon's Tale - Cressida Cowell - 3H 51M<br>
 HTTYD 06 - A Hero's Guide to Deadly Dragons  - Cressida Cowell - 2H 41M<br>
@@ -864,7 +865,7 @@ Summary Report<br>
 Folder totals<br>
 Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
-Completed in 2021 - 63 books - 592H 29M / 24D 16H 29M<br>
+Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
 Completed in 2019 - 52 books - 555H 25M / 23D 3H 25M<br>
 Completed in 2018 - 29 books - 286H 52M / 11D 22H 52M<br>
@@ -877,7 +878,7 @@ Book Reserve - Physical and Kindle Books - 16 books - 196H 33M / 8D 4H 33M<br>
 Book Reserve - Manga - 1 books - 7H 58M / 0D 7H 58M<br>
 Book Reserve - Comic Trades - 116 books - 726H 16M / 30D 6H 16M<br>
 Book Reserve - Audiobooks (Need new source) - 24 books - 356H 45M / 14D 20H 45M<br>
-Book Reserve - Audiobooks - 452 books - 6083H 32M / 253D 11H 32M<br>
+Book Reserve - Audiobooks - 453 books - 6086H 27M / 253D 14H 27M<br>
  <br>
 Records<br>
 Most books read in a year: 95 completed in 2020<br>
@@ -885,20 +886,20 @@ Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
 210 queued items: 2745H 14M / 114D 9H 14M<br>
 0 reserve titles are marked as high priority<br>
-25.64% of reserve items are queued<br>
+25.61% of reserve items are queued<br>
  <br>
-All books included in this report: 1215 titles - 14486H 36M / 603D 14H 36M<br>
-Records not found in the lookup file: 3<br>
+All books included in this report: 1217 titles - 14500H 53M / 604D 4H 53M<br>
+Records not found in the lookup file: 2<br>
 No duplicate records found<br>
  <br>
-Total completed since 01/01/2013: 396 titles - 4370H 17M / 182D 2H 17M<br>
-Total remaining in queue and reserve: 819 titles - 10116H 18M / 421D 12H 18M<br>
-Average completed per year: 45.3 titles - 500H 4M / 20D 20H 4M<br>
+Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
+Total remaining in queue and reserve: 820 titles - 10119H 13M / 421D 15H 13M<br>
+Average completed per year: 45.4 titles - 501H 13M / 20D 21H 13M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.8<br>
+Remaining years of reserve material at current year pace: 9.6<br>
  <br>
-Total time to process all reports: 00:00:07.132 (7.132 seconds)<br>
-Total time including file writes: 00:00:07.133 (7.133 seconds)
+Total time to process all reports: 00:00:01.713 (1.713 seconds)<br>
+Total time including file writes: 00:00:01.713 (1.713 seconds)
 </div>
 </body>
 </html>
