--- a/report/books/sanderstatus.html
+++ b/report/books/sanderstatus.html
@@ -7,15 +7,15 @@
 </head>
 <body>
 <div class="content">
-Progress bars collected from from brandonsanderson.com on 2021-09-28<br>
+Progress bars collected from from brandonsanderson.com on 2021-09-29<br>
 <br>
 Cytonic Final Proofread 100%<br>
 <br>
 Wax & Wayne Book 4 (Mistborn 7) Draft 2.0 100%<br>
 <br>
-ReDawn (Skyward Novella 2) Final Draft 100%<br>
+Skyward Four Pre Writing 20%<br>
 <br>
-Evershore (Skyward Novella 3) Final Draft 30%<br>
+Evershore (Skyward Novella 3) Final Draft 100%<br>
 <br>
 </div>
 </body>
