book and media report content update Fri 10/01/2021

--- a/report/books/Reserved_books_sorted_by_length.html
+++ b/report/books/Reserved_books_sorted_by_length.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by length - 09/30/2021 06:00<br>
+Reserved books sorted by length - 10/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-820 books<br>
+823 books<br>
  <br>
 Art of War - Sun Tzu - 1H 16M (Queue - Audible Audiobooks)<br>
 Fantastic Beasts and Where to Find Them - J. K. Rowling - 1H 54M (Queue - Current Audiobooks)<br>
@@ -155,6 +155,7 @@ David and Goliath - Malcolm Gladwell - 7H 2M (Queue - Current Audiobooks)<br>
 Protector (Known Space) - Larry Niven - 7H 5M (Book Reserve - Audiobooks)<br>
 What Unites Us - Dan Rather - 7H 7M (Book Reserve - Audiobooks)<br>
 Too Much and Never Enough - Mary L. Trump - 7H 7M (Book Reserve - Audiobooks)<br>
+Think Like a Freak - Steven D. Levitt - 7H 7M (Queue - Current Audiobooks)<br>
 The Chrysalids - John Wyndham - 7H 7M (Book Reserve - Audiobooks (Need new source))<br>
 UBIK - Philip K Dick - 7H 9M (Book Reserve - Audiobooks)<br>
 Pern 9-03 - Dragonsong - 7H 11M (Book Reserve - Audiobooks)<br>
@@ -214,6 +215,7 @@ Earthsea 1 - A Wizard of Earthsea - Ursula K. Le Guin - 8H 13M (Book Reserve - P
 The Integral Trees - Larry Niven - 8H 13M (Book Reserve - Audiobooks)<br>
 The Witness for the Dead - Katherine Addison - 8H 14M (Queue - Current Audiobooks)<br>
 The End of Eternity - Isaac Asimov - 8H 14M (Book Reserve - Audiobooks)<br>
+When to Rob a Bank - Steven D. Levitt - 8H 16M (Queue - Current Audiobooks)<br>
 How to Raise Kids Who Aren't Assholes - Melinda Wenner Moyer - 8H 19M (Queue - Current Audiobooks)<br>
 No-Drama Discipline - Daniel J. Siegel - 8H 21M (Queue - Current Audiobooks)<br>
 The Pleasure of Finding Things Out - Richard P. Feynman - 8H 23M (Queue - Audible Audiobooks)<br>
@@ -586,6 +588,7 @@ Eifelheim - Michael Flynn - 17H 17M (Book Reserve - Audiobooks)<br>
 The City and the Stars - Arthur C Clark - 17H 18M (Book Reserve - Audiobooks (Need new source))<br>
 American Moonshot - John F. Kennedy and the Great Space Race - Douglas Brinkley - 17H 19M (Queue - Current Audiobooks)<br>
 The Demon-Haunted World - Science as a Candle in the Dark - Carl Sagan - 17H 23M (Queue - Audible Audiobooks)<br>
+The Big Picture - On the Origins of Life, Meaning, and the Universe Itself - Sean Carroll - 17H 27M (Queue - Current Audiobooks)<br>
 Uplift 2 - Startide Rising - David Brin - 17H 31M (Book Reserve - Audiobooks (Need new source))<br>
 Salem's Lot - Stephen King - 17H 40M (Book Reserve - Audiobooks)<br>
 Doctor Sleep - Stephen King - 17H 43M (Book Reserve - Audiobooks)<br>
@@ -744,7 +747,7 @@ Shogun - James Clavell - 53H 48M (Queue - Current Audiobooks)<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
+Queue - Current Audiobooks - 182 books - 2294H 17M / 95D 14H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -765,22 +768,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2745H 14M / 114D 9H 14M<br>
+213 queued items: 2778H 5M / 115D 18H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.61% of reserve items are queued<br>
+25.88% of reserve items are queued<br>
  <br>
-All books included in this report: 1217 titles - 14500H 53M / 604D 4H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
-Total remaining in queue and reserve: 820 titles - 10119H 13M / 421D 15H 13M<br>
-Average completed per year: 45.4 titles - 501H 3M / 20D 21H 3M<br>
+Total remaining in queue and reserve: 823 titles - 10152H 5M / 423D 0H 5M<br>
+Average completed per year: 45.4 titles - 500H 54M / 20D 20H 54M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
-Total time including file writes: 00:00:01.589 (1.589 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
