--- a/report/books/All_books_sorted_by_name.html
+++ b/report/books/All_books_sorted_by_name.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-All books sorted by name - 09/30/2021 06:00<br>
+All books sorted by name - 10/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-1217 books<br>
+1220 books<br>
  <br>
 1-2-3 Magic - Thomas Phelan - 7H 3M (Book Reserve - Audiobooks)<br>
 112263 - Stephen King - 30H 46M (Queue - Current Audiobooks)<br>
@@ -873,6 +873,7 @@ The Answer Is - Alex Trebek - 4H 37M (Queue - Current Audiobooks)<br>
 The Anthropocene Reviewed - John Green - 10H 6M (Queue - Current Audiobooks)<br>
 The Batman Who Laughs - 7H 13M (Completed in 2021)<br>
 The Better Angels of Our Nature Why Violence Has Declined - Steven Pinker - 36H 39M (Queue - Audible Audiobooks)<br>
+The Big Picture - On the Origins of Life, Meaning, and the Universe Itself - Sean Carroll - 17H 27M (Queue - Current Audiobooks)<br>
 The Black Swan - The Impact of the Highly Improbable - Nassim Nicholas Taleb - 14H 20M (Queue - Audible Audiobooks)<br>
 The Boat of a Million Years - Poul Anderson - 20H 19M (Book Reserve - Audiobooks)<br>
 The Body - Bill Bryson - 14H 8M (Completed in 2020)<br>
@@ -1118,6 +1119,7 @@ Themis Files 1 - Sleeping Giants - Sylvain Neuvel - 8H 31M (Book Reserve - Audio
 Themis Files 2 - Waking Gods - Sylvain Neuvel - 9H 5M (Book Reserve - Audiobooks)<br>
 Themis Files 3 - Only Human - Sylvain Neuvel - 8H 46M (Book Reserve - Audiobooks)<br>
 They Can't Kill Us All - Wesley Lowery - 8H 12M (Book Reserve - Audiobooks)<br>
+Think Like a Freak - Steven D. Levitt - 7H 7M (Queue - Current Audiobooks)<br>
 Thinking, Fast and Slow - Daniel Kahneman - 20H 7M (Completed in 2020)<br>
 Thirteen - Richard K. Morgan - 22H 32M (Book Reserve - Audiobooks)<br>
 This Census-Taker - China Miéville - 4H 3M (Completed in 2020)<br>
@@ -1192,6 +1194,7 @@ What If - Randall Munroe - 6H 38M (Completed in 2018)<br>
 What Makes a Marriage Last - Marlo Thomas - 20H 1M (Book Reserve - Audiobooks)<br>
 What Unites Us - Dan Rather - 7H 7M (Book Reserve - Audiobooks)<br>
 What the Dog Saw - Malcolm Gladwell - 12H 52M (Queue - Current Audiobooks)<br>
+When to Rob a Bank - Steven D. Levitt - 8H 16M (Queue - Current Audiobooks)<br>
 Where Do We Go From Here - Martin Luther King - 8H 40M (Queue - Current Audiobooks)<br>
 Where Good Ideas Come From - Steven Johnson - 7H 12M (Queue - Current Audiobooks)<br>
 White Fang - Jack London - 1H 59M (Queue - Current Audiobooks)<br>
@@ -1234,7 +1237,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M (Book Rese
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
+Queue - Current Audiobooks - 182 books - 2294H 17M / 95D 14H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -1255,22 +1258,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2745H 14M / 114D 9H 14M<br>
+213 queued items: 2778H 5M / 115D 18H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.61% of reserve items are queued<br>
+25.88% of reserve items are queued<br>
  <br>
-All books included in this report: 1217 titles - 14500H 53M / 604D 4H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
-Total remaining in queue and reserve: 820 titles - 10119H 13M / 421D 15H 13M<br>
-Average completed per year: 45.4 titles - 501H 3M / 20D 21H 3M<br>
+Total remaining in queue and reserve: 823 titles - 10152H 5M / 423D 0H 5M<br>
+Average completed per year: 45.4 titles - 500H 54M / 20D 20H 54M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
-Total time including file writes: 00:00:01.589 (1.589 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
