--- a/report/books/Reserved_books_sorted_by_folder.html
+++ b/report/books/Reserved_books_sorted_by_folder.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="content">
-Reserved books sorted by folder - 09/30/2021 06:00<br>
+Reserved books sorted by folder - 10/01/2021 06:00<br>
 -----------------------------------------------------<br>
  <br>
-Queue - Current Audiobooks : 179 books - 2261H 26M / 94D 5H 26M<br>
+Queue - Current Audiobooks : 182 books - 2294H 17M / 95D 14H 17M<br>
  <br>
 112263 - Stephen King - 30H 46M<br>
 13 Things Mentally Strong Parents Don't Do - Amy Morin - 10H 13M<br>
@@ -119,6 +119,7 @@ Thank You for Arguing - Jay Heinrichs - 14H 38M<br>
 Thank You for Being Late - Thomas L. Friedman - 19H 53M<br>
 The Answer Is - Alex Trebek - 4H 37M<br>
 The Anthropocene Reviewed - John Green - 10H 6M<br>
+The Big Picture - On the Origins of Life, Meaning, and the Universe Itself - Sean Carroll - 17H 27M<br>
 The Call of the Wild - Jack London - 3H 20M<br>
 The Children Of Hurin - J.R.R. Tolkien - 7H 48M<br>
 The Chronicles of Amber 07 - Blood of Amber - 7H 18M<br>
@@ -168,6 +169,7 @@ The Wind-Up Bird Chronicle - Haruki Murakami - 26H 19M<br>
 The Witness for the Dead - Katherine Addison - 8H 14M<br>
 The World Is Flat - A Brief History of the Twenty-first Century - Thomas L. Friedman - 27H 22M<br>
 The World of Ice & Fire - George R.R. Martin - 21H 28M<br>
+Think Like a Freak - Steven D. Levitt - 7H 7M<br>
 Thrawn 1 - Thrawn - Timothy Zahn - 17H 1M<br>
 Time Quartet 1 - A Wrinkle In Time - Madeleine L'engle - 6H 28M<br>
 Time Travel - A History - James Gleick - 10H 3M<br>
@@ -182,6 +184,7 @@ Wayfarers 1 - The Long Way to a Small, Angry Planet - Becky Chambers - 14H 27M<b
 We - Yevgeny Zamyatin - 6H 53M<br>
 We Have Always Lived in the Castle - Shirley Jackson - 5H 34M<br>
 What the Dog Saw - Malcolm Gladwell - 12H 52M<br>
+When to Rob a Bank - Steven D. Levitt - 8H 16M<br>
 Where Do We Go From Here - Martin Luther King - 8H 40M<br>
 Where Good Ideas Come From - Steven Johnson - 7H 12M<br>
 White Fang - Jack London - 1H 59M<br>
@@ -863,7 +866,7 @@ Zones of Thought 3 - The Children of the Sky - Vernor Vinge - 26H 56M<br>
 Summary Report<br>
  <br>
 Folder totals<br>
-Queue - Current Audiobooks - 179 books - 2261H 26M / 94D 5H 26M<br>
+Queue - Current Audiobooks - 182 books - 2294H 17M / 95D 14H 17M<br>
 Queue - Audible Audiobooks - 31 books - 483H 48M / 20D 3H 48M<br>
 Completed in 2021 - 64 books - 603H 51M / 25D 3H 51M<br>
 Completed in 2020 - 95 books - 918H 55M / 38D 6H 55M<br>
@@ -884,22 +887,22 @@ Records<br>
 Most books read in a year: 95 completed in 2020<br>
 Most hours read in a year: 918H 55M / 38D 6H 55M completed in 2020<br>
  <br>
-210 queued items: 2745H 14M / 114D 9H 14M<br>
+213 queued items: 2778H 5M / 115D 18H 5M<br>
 0 reserve titles are marked as high priority<br>
-25.61% of reserve items are queued<br>
+25.88% of reserve items are queued<br>
  <br>
-All books included in this report: 1217 titles - 14500H 53M / 604D 4H 53M<br>
-Records not found in the lookup file: 0<br>
+All books included in this report: 1220 titles - 14533H 45M / 605D 13H 45M<br>
+Records not found in the lookup file: 3<br>
 No duplicate records found<br>
  <br>
 Total completed since 01/01/2013: 397 titles - 4381H 39M / 182D 13H 39M<br>
-Total remaining in queue and reserve: 820 titles - 10119H 13M / 421D 15H 13M<br>
-Average completed per year: 45.4 titles - 501H 3M / 20D 21H 3M<br>
+Total remaining in queue and reserve: 823 titles - 10152H 5M / 423D 0H 5M<br>
+Average completed per year: 45.4 titles - 500H 54M / 20D 20H 54M<br>
 Remaining years of reserve material at average yearly pace: 18.1<br>
-Remaining years of reserve material at current year pace: 9.6<br>
+Remaining years of reserve material at current year pace: 9.7<br>
  <br>
-Total time to process all reports: 00:00:01.588 (1.588 seconds)<br>
-Total time including file writes: 00:00:01.589 (1.589 seconds)
+Total time to process all reports: 00:00:01.803 (1.803 seconds)<br>
+Total time including file writes: 00:00:01.803 (1.803 seconds)
 </div>
 </body>
 </html>
